# witch

./: AUTHORS  Makefile  Makefile.am  README  config.def.mk  configure.ac  libwitch.pc.in
archlinux/: PKGBUILD
include/: witch.h
src/: curry.c  witch.c
test/: alltests.h  main.c  test.c  test.h  test_witch_h.c
